# smart_importer

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGES  LICENSE  Makefile  README.md  README.rst  __init__.py  machinelearning.py  machinelearning_helpers.py  machinelearning_helpers_test.py  machinelearning_test.py  predict_payees.py  predict_payees_test.py  predict_postings.py  predict_postings_test.py  pylintrc  pyproject.toml  requirements.txt  sample_training.beancount  setup.cfg  setup.py  smart_csv_importer.py  smart_csv_importer_test.py  tox.ini  training_data.beancount
.builds/: archlinux.yml
.github/: pr-labeler.yml
.github/workflows/: build-publish.yml  ci.yml  pr-labeler.yml  release-drafter.yml  test-build-publish.yml
docs/: Applying_the_Decorators.rst  Specifying_Training_Data.rst  system-overview.puml
examples/: main.import.py
examples/importer_using_predict_postings/: importer.py
examples/importer_using_predict_postings/tests/: importer_using_predict_postings_test.py
smart_importer/: __init__.py  decorator.py  decorator_baseclass.py  detector.py  entries.py  hooks.py  machinelearning_helpers.py  pipelines.py  predict_payees.py  predict_postings.py  predictor.py  trimmer.py  wrapper.py
smart_importer/examples/: main.import.py  run-bean-extract.sh
smart_importer/examples/importer_using_predict_postings/: importer.py
smart_importer/examples/importer_using_predict_postings/tests/: importer_using_predict_postings_test.py
smart_importer/examples/ledger/: example.beancount
smart_importer/tests/: machinelearning_helpers_test.py  predict_payees_test.py  predict_postings_data_test.py  predict_postings_example_test.py  predict_postings_test.py
smart_importer/tests/data/: multiaccounts-expected.beancount  multiaccounts-extracted.beancount  simple-expected.beancount  simple-extracted.beancount  simple-training.beancount  single-account-extracted.beancount  single-account-training.beancount
tests/: data_test.py  entries_test.py  machinelearning_helpers_test.py  pipelines_test.py  predict_payees_test.py  predict_postings_data_test.py  predict_postings_test.py  predictors_test.py  trimmer_test.py
tests/data/: chinese.beancount  minimal.beancount  multiaccounts-training.beancount  multiaccounts.beancount  simple-extracted.beancount  simple.beancount  single-account.beancount
