[build-system]
requires = ["setuptools>=30.3.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["sklearn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["beancount.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["beangulp.*"]
follow_untyped_imports = true

[tool.ruff]
target-version = "py38"
line-length = 79

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "UP",  # pyupgrade
    "TC",  # type-checking
]
