[metadata]
name = smart_importer
version = attr: setuptools_scm.get_version
description = Augment Beancount importers with machine learning functionality.
long_description = file: README.rst
url = https://github.com/beancount/smart_importer
author = Johannes Harms
keywords = fava beancount accounting machinelearning
license = MIT
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Environment :: Console
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Office/Business :: Financial :: Investment

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    beancount>=2.3.5
    scikit-learn>=1.0
    numpy>=1.18.0

[options.packages.find]
exclude =
    tests
